M2/C_v2/slurm-15887944.out
gcc -c -lm -pg -O0 -fopenmp -mavx -std=c99 -g -L/usr/lib64/openmpi/lib -lmpi_cxx -lmpi -I/usr/include/openmpi-x86_64 setup_final.c
setup_final.c:137:5: error: expected identifier or ‘(’ before ‘if’
     if (rank == 0) {
     ^
setup_final.c:141:7: error: expected identifier or ‘(’ before ‘else’
     } else {
       ^
setup_final.c:146:5: warning: data definition has no type or storage class [enabled by default]
     MPI_Finalize();
     ^
setup_final.c:146:5: warning: type defaults to ‘int’ in declaration of ‘MPI_Finalize’ [enabled by default]
setup_final.c:148:5: error: expected identifier or ‘(’ before ‘}’ token
     }
     ^
make: *** [setup_final.o] Error 1
--------------------------------------------------------------------------
[[43059,1],1]: A high-performance Open MPI point-to-point messaging module
was unable to find any relevant network interfaces:

Module: OpenFabrics (openib)
  Host: smp-9-20

Another transport will be used instead, although this may result in
lower performance.
--------------------------------------------------------------------------
[smp-9-19.local:14165] 1 more process has sent help message help-mpi-btl-base.txt / btl:no-nics
[smp-9-19.local:14165] Set MCA parameter "orte_base_help_aggregate" to 0 to see all help / error messages

real	0m0.809s
user	0m0.079s
sys	0m0.065s
